# MMCLL

./: README.md
CSVersion/: CSLib.cs
CppVersion/: CppLib.cpp
DelphiVersion/: DelphiLib.pas
EVersion/: ELib.e  README.md  e_lib_source.e
JavaVersion/: JavaLib.java
PythonVersion/: EXAMPLE.md  PyLib.py  README.md  SPECIFIC.md  requestment.txt
RustVersion/: Cargo.toml  EXAMPLE.md  README.md  SPECIFIC.md  rust_lib.rs
TSVersion/: TSLib.ts
